# solar-system-generator

./: .gitignore  README.md  pyproject.toml  solsysgen-env.yml
.ipynb_checkpoints/: create_a_solar_system-checkpoint.ipynb  myenv-checkpoint.yml
molecule_project/: README.md  pyproject.toml
molecule_project/examples/: Untitled.ipynb  ethanol.xyz  methane.xyz  visualize_molecule.ipynb  water.xyz
molecule_project/src/molecules/: __init__.py  atom.py  geometry.py  io.py  molecule.py  visualize.py
molecule_project/utils/: checkpoint.py
solsysgen/: __init__.py  planet.py  solarsystem.py  sun.py
solsysgen/utils/: checkpoint.py
